  boxed table.
* troff: The CW, CI, CB, and CX fonts no longer substitute the "fi" and "fl"
  ligatures with the "devps" device. This is consistent with "devpost".
* [nt]roff: If a word starts with a motion followed by a hyphenation
  indicator, such as "\h'1m'\%text" or "\|\%text", hyphenation for the
  word is now suppressed, and no hyphen is generated.
* [nt]roff: The ".length" and ".index" request now strip an initial """ in
  their last argument to allow initial white space.
* [nt]roff: The blank line macro is not called when a diversion is reread
  in nofill mode anymore.
* troff: The escape sequence "\s[0]" now resets the point size to the
  previous value as "\s0" does.
* [nt]roff: Arbitrary delimiters are now allowed with "\s''" escape
  sequences.
* troff: The indent of the current line is no longer part of a PDF link
  that continues from the previous line.

Release 060905
* [nt]roff: The new ".brnl" request causes a break each time a newline is
  encountered at the end of a text input line. Unlike nofill mode, text is
  still wrapped to the line length.
* [nt]roff: The new ".brpnl" request causes a break and a spread each time
  a newline is encountered at the end of a text input line (as if it were
  attached a "\p"). The "\p" escape sequence changes its semantics in this
  mode and causes a break without a spread.
* [nt]roff: The new ".lpfx" request allows to print a string whenever
  a new output line is started. This is mainly useful to implement a
  historic form of block quotation.
* [nt]roff: The predefined number registers "\n[.in]", "\n[.hy]",
  "\n[.int]", "\n[.lt]", "\n[.pn]", "\n[.psr]", and "\n[.sr]" have been
  added.
* [nt]roff: The semantics of the number registers "\n(.x" (remaining space
  on current output line) and "\n(.y" (current actual indent) are now
  documented.
* [nt]roff: The "\n[.kc]" register has been introduced; it holds the width
  of a word interrupted with "\c" on output.